welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:21: error: type mismatch;
 found   : Unit
 required: Boolean
	if (o < 3)
        ^